# agent-data

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: agent-ready-data-standard.md  cross-verification.md  design.md  high-quality-agent-data.md  mvp-cli-implementation-design.md
docs/superpowers/plans/: 2026-06-22-agent-ready-cli-mvp.md
src/agent_data/: __init__.py  cli.py  config.py
src/agent_data/application/: __init__.py  harness.py  process_document.py
src/agent_data/domain/: errors.py  models.py  schema.py
src/agent_data/evidence/: __init__.py  verifier.py
src/agent_data/export/: __init__.py  exporters.py
src/agent_data/extraction/: __init__.py  extractor.py  llm_client.py  prompts.py
src/agent_data/parsers/: base.py  crawl4ai.py  mineru.py  registry.py  trafilatura_parser.py
src/agent_data/quality/: __init__.py  cross_verification.py  gates.py  profile.py  scorer.py
src/agent_data/sources/: __init__.py  (+1 more)
tests/contract/: test_crawl4ai_contract.py  test_llm_contract.py  test_mineru_contract.py
tests/e2e/: test_cli.py  test_process_document.py
tests/fixtures/: article.html  llm_extraction.json  mineru_missing_content_list.json  mineru_success.json
tests/integration/: test_live_llm.py  test_live_mineru.py
tests/unit/: test_config.py  test_cross_verification.py  test_evidence_verifier.py  test_exporters.py  test_extractor.py  test_gates.py  test_harness.py  test_models.py  test_parser_registry.py  test_quality_profile.py  test_schema.py  test_scorer.py  test_source_resolver.py  test_trafilatura_parser.py
