[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-ready-data"
version = "0.1.0"
description = "Build evidence-grounded Agent-ready data packages from URLs and PDFs"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
  "openai>=1.0,<3",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "trafilatura>=2.0,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.11,<1"]

[project.scripts]
agent-data = "agent_data.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_data"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
